src/sass/components/_navigation.scss
// BEGIN CODE COMPILED FROM _NAVIGATION.SCSS //
@media only screen and (max-width: 1099px) {
  #hamburger {
    cursor: pointer;
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    background-color: transparent;
    border: 0;
    color: $color-primary-green;
    font-size: 5rem;
    padding: 2rem;
    &:focus {
      outline: none;
    }
  }
  #close {
    cursor: pointer;
    width: 100%;
    text-align: right;
    font-size: 3rem;
    background-color: transparent;
    border: 0;
    padding: 0;
    margin: 0;
    color: $color-primary-green;
  }
  .navigation {
    top: 0;
    right: 0;

    .navigation__list:not(.navigation__list--secondary) {
      overflow-y: scroll;
      padding-bottom: 3rem;
      background-color: $color-black;
      position: absolute;
      top: 0;
      right: 0;
      max-width: 70vw;
      height: 100vh;
      &.hidden {
        display: none;
      }
    }

    .navigation__list li {
      background-color: $color-black;
      display: block;
      width: 100%;
      padding: 3rem 2.5rem 3rem 1.5rem;
      &:not(:last-child) {
        border-bottom: 1px solid rgba(255, 255, 255, 0.15);
      }
    }

    .navigation__list--secondary {
      margin-top: 3rem;
      li {
        margin: 0;
        background-color: $color-black;
      }
    }

    li.parent-nav {
      height: 8rem;
      overflow: hidden;
      transition: overflow 5s ease-in-out;

      &:hover {
        height: auto;
        overflow: visible;
      }
    }
  }
}

// the following code styles all of the links and navigations in the footer //
.navigation__list {
  list-style-type: none;
  text-transform: uppercase;
  li {
    display: inline-block;
    &:not(:last-child) {
      margin-right: 2rem;
    }
  }
  .navigation__links {
    font-size: $font-size-default;
    color: $color-white;
    text-decoration: none;

    &:hover {
      color: $color-light-gray;
      text-decoration: none;
    }

    &--footer {
      font-size: $font-size-default;
      text-transform: none;
      display: block;
    }
  }
}

@media only screen and (min-width: 500px) {
  .navigation {
    min-width: 30vw;
    max-width: 50vw;
  }

  #hamburger {
    font-size: 4rem;
  }
}

@media only screen and (min-width: 1100px) {
  #hamburger,
  #close {
    display: none;
  }

  .navigation {
    min-width: 100%;
    max-width: 100%;
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;

    .navigation__list {
      padding: 1.5rem 2rem;
      float: right;

      &.hidden {
        display: block;
      }

      &--secondary {
        float: none;
        padding: 0;
        position: absolute;
        background-color: $header-banner-color;
        display: none;
        padding-top: 2.5rem;
        li {
          display: block;
          width: 100%;
          padding: 3rem 2.5rem 3rem 1.5rem;
          &:not(:last-child) {
            border-bottom: 1px solid rgba(255, 255, 255, 0.15);
          }
        }
      }
    }
  }

  .parent-nav:hover > ul {
    display: block;
  }
}

@media only screen and (min-width: 1350px) {
  .navigation {
    transform: translate(0, -50%);
  }
}

// END NAVIGATION CODE //

